@@ -10,7 +10,6 @@ import uk.gov.hmcts.reform.prl.utils.CommonUtils;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.json.JsonArray;
 import javax.json.JsonValue;
 import javax.json.stream.JsonCollectors;
@@ -29,7 +28,7 @@ public class ChildrenAndOtherPeopleMapper {
         }
         List<ChildrenAndOtherPeopleRelation> childrenAndApplicantList = childrenAndOtherPeopleRelation.stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
         return childrenAndApplicantList.stream().map(relation -> new NullAwareJsonObjectBuilder()
             .add("otherPeopleFullName", relation.getOtherPeopleFullName())
             .add("childFullName", relation.getChildFullName())
