@@ -9,7 +9,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
-import uk.gov.hmcts.reform.prl.config.EmailTemplatesConfig;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
 import uk.gov.hmcts.reform.prl.enums.LanguagePreference;
 import uk.gov.hmcts.reform.prl.models.Element;
@@ -19,36 +18,20 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.notify.EmailTemplateVars;
 import uk.gov.hmcts.reform.prl.models.dto.notify.SolicitorEmail;
 import uk.gov.hmcts.reform.prl.models.email.EmailTemplateNames;
-import uk.gov.service.notify.NotificationClient;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class SolicitorEmailService {
-
-    private final NotificationClient notificationClient;
-    private final EmailTemplatesConfig emailTemplatesConfig;
     private final ObjectMapper objectMapper;
-    private final UserService userService;
-    private static final String DATE_FORMAT = "dd-MM-yyyy";
-
-    @Autowired
-    private EmailService emailService;
-
+    private final EmailService emailService;
     @Value("${uk.gov.notify.email.application.email-id}")
     private String courtEmail;
-
-    @Value("${uk.gov.notify.email.application.court-name}")
-    private String courtName;
-
     @Value("${xui.url}")
     private String manageCaseUrl;
-
-    @Autowired
-    private CourtFinderService courtLocatorService;
+    private  final CourtFinderService courtLocatorService;
 
     public EmailTemplateVars buildEmail(CaseDetails caseDetails, boolean isC100PendingPaymentSolEmail) {
         try {
@@ -57,11 +40,11 @@ public class SolicitorEmailService {
                 .getApplicants()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             List<String> applicantNamesList = applicants.stream()
                 .map(PartyDetails::getLabelForDynamicList)
-                .collect(Collectors.toList());
+                .toList();
 
             String applicantNames = String.join(", ", applicantNamesList);
             Court court = courtLocatorService.getNearestFamilyCourt(caseData);
@@ -79,7 +62,7 @@ public class SolicitorEmailService {
                 .build();
 
         } catch (NotFoundException e) {
-            log.error("Cannot send email");
+            log.error("Cannot send email", e);
         }
         return null;
     }
@@ -158,11 +141,11 @@ public class SolicitorEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         List<String> applicantSolicitorEmailList = applicants.stream()
             .map(PartyDetails::getSolicitorEmail)
-            .collect(Collectors.toList());
+            .toList();
 
         solicitorEmail = (!applicantSolicitorEmailList.isEmpty() && null != applicantSolicitorEmailList.get(0)
             && !applicantSolicitorEmailList.get(0).isEmpty() && applicantSolicitorEmailList.size() == 1) ? applicantSolicitorEmailList.get(
@@ -238,11 +221,11 @@ public class SolicitorEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         List<String> applicantSolicitorEmailList = applicants.stream()
             .map(PartyDetails::getSolicitorEmail)
-            .collect(Collectors.toList());
+            .toList();
 
         solicitorEmail = (!applicantSolicitorEmailList.isEmpty() && null != applicantSolicitorEmailList.get(0)
             && !applicantSolicitorEmailList.get(0).isEmpty() && applicantSolicitorEmailList.size() == 1) ? applicantSolicitorEmailList.get(
